fix: button span alignment

--- a/javascript/tokenscript-viewer/src/global/app.css
+++ b/javascript/tokenscript-viewer/src/global/app.css
@@ -55,6 +55,10 @@ select:hover {
 	margin: 0;
 	font-size: 14px;
 	color: inherit;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .btn-primary {
